--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     
     <div class="surprise-area hidden">
-        <img id="gift-box" src="https://i.imgur.com/KXJzshT.png" alt="Gift Box" onclick="openGift()">
+        <img id="gift-box" src="https://github.com/anand11212/JS-BEST/blob/main/teddy.webp?raw=true" alt="Gift Box" onclick="openGift()">
         <div id="final-message" class="hidden">Jeenal Sharma, You Are Perfect & Prettiest! 💖</div>
         <br>
         <button onclick="showVideo()">Click for a Special Video</button>
